ac1dsworld/rtorrent-rutorrent/3.1.3/CHANGELOG.md
---
title: Changelog
---

**Important:**
*for the complete changelog, please refer to the website*



## [rtorrent-rutorrent-3.1.3](https://github.com/truecharts/charts/compare/rtorrent-rutorrent-3.1.0...rtorrent-rutorrent-3.1.3) (2024-01-01)

### Chore



- bump all charts for OCI test push

- move everything to consume OCI-hosted common-chart dependency

- update container image common to v17.2.19[@4ebb688](https://github.com/4ebb688) by renovate ([#16733](https://github.com/truecharts/charts/issues/16733))

- update container image common to v17.2.18[@085ba3c](https://github.com/085ba3c) by renovate ([#16732](https://github.com/truecharts/charts/issues/16732))

- standardize ./img references ([#16704](https://github.com/truecharts/charts/issues/16704))

- lints some docs, uses front-matter instead of # h1, and fix list items in changelog ([#16589](https://github.com/truecharts/charts/issues/16589))


## [rtorrent-rutorrent-3.1.2](https://github.com/truecharts/charts/compare/rtorrent-rutorrent-3.1.0...rtorrent-rutorrent-3.1.2) (2024-01-01)

### Chore



- bump all charts for OCI test push

- move everything to consume OCI-hosted common-chart dependency

- update container image common to v17.2.18[@085ba3c](https://github.com/085ba3c) by renovate ([#16732](https://github.com/truecharts/charts/issues/16732))

- standardize ./img references ([#16704](https://github.com/truecharts/charts/issues/16704))

- lints some docs, uses front-matter instead of # h1, and fix list items in changelog ([#16589](https://github.com/truecharts/charts/issues/16589))
## [rtorrent-rutorrent-3.1.0](https://github.com/truecharts/charts/compare/rtorrent-rutorrent-3.0.2...rtorrent-rutorrent-3.1.0) (2023-12-30)

### Chore

- update helm general minor by renovate ([#16579](https://github.com/truecharts/charts/issues/16579))

## [rtorrent-rutorrent-3.0.2](https://github.com/truecharts/charts/compare/rtorrent-rutorrent-3.0.1...rtorrent-rutorrent-3.0.2) (2023-12-26)

### Chore

- update helm general non-major by renovate ([#16545](https://github.com/truecharts/charts/issues/16545))

## [rtorrent-rutorrent-3.0.1](https://github.com/truecharts/charts/compare/rtorrent-rutorrent-3.0.0...rtorrent-rutorrent-3.0.1) (2023-12-25)

### Fix

- adding probe check ([#16391](https://github.com/truecharts/charts/issues/16391))

## [rtorrent-rutorrent-3.0.0](https://github.com/truecharts/charts/compare/rtorrent-rutorrent-2.0.11...rtorrent-rutorrent-3.0.0) (2023-12-25)

### Chore

- update helm chart common to 17.1.0 by renovate ([#16532](https://github.com/truecharts/charts/issues/16532))

## [rtorrent-rutorrent-2.0.11](https://github.com/truecharts/charts/compare/rtorrent-rutorrent-2.0.10...rtorrent-rutorrent-2.0.11) (2023-12-24)

### Chore

- update helm general non-major by renovate ([#16384](https://github.com/truecharts/charts/issues/16384))

## [rtorrent-rutorrent-2.0.10](https://github.com/truecharts/charts/compare/rtorrent-rutorrent-2.0.9...rtorrent-rutorrent-2.0.10) (2023-12-24)

### Chore

- update helm general non-major by renovate ([#16376](https://github.com/truecharts/charts/issues/16376))

## [rtorrent-rutorrent-2.0.9](https://github.com/truecharts/charts/compare/rtorrent-rutorrent-2.0.8...rtorrent-rutorrent-2.0.9) (2023-12-23)

### Chore

- update helm general non-major by renovate ([#16373](https://github.com/truecharts/charts/issues/16373))

## [rtorrent-rutorrent-2.0.8](https://github.com/truecharts/charts/compare/rtorrent-rutorrent-2.0.7...rtorrent-rutorrent-2.0.8) (2023-12-23)

### Chore

- update helm general non-major by renovate ([#16369](https://github.com/truecharts/charts/issues/16369))

## [rtorrent-rutorrent-2.0.7](https://github.com/truecharts/charts/compare/rtorrent-rutorrent-2.0.6...rtorrent-rutorrent-2.0.7) (2023-12-23)

### Chore

- update helm general non-major by renovate ([#16361](https://github.com/truecharts/charts/issues/16361))

## [rtorrent-rutorrent-2.0.6](https://github.com/truecharts/charts/compare/rtorrent-rutorrent-2.0.5...rtorrent-rutorrent-2.0.6) (2023-12-22)

